[package]
name = "RSA"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.2"
num-bigint = { version = "0.4.5", features = ["rand"]}
num-iter = "0.1.45"
num-traits = "0.2.19"
rand = "0.8.5"
rng = "0.1.0"
num-prime = "0.4.4"

